add search to search service
